Some pendencies adjusts

--- a/chat/locale/pt_BR/LC_MESSAGES/django.po
+++ b/chat/locale/pt_BR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-04-06 22:17-0300\n"
+"POT-Creation-Date: 2017-04-11 19:17-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,6 +17,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+
 #: chat/forms.py:19
 msgid "This field is required."
 msgstr "Esse campo é obrigatório."
@@ -29,7 +30,9 @@ msgstr "A imagem é muito grande. Ela deve possuir 5MB ou menos."
 msgid ""
 "Select a valid file. The file must posses one of this extensions: .jpg, ."
 "png, .gif"
-msgstr "Selecione um arquivo válido. O arquivo deve possuir uma das extensões a seguir: .jpg, .png, .gif"
+msgstr ""
+"Selecione um arquivo válido. O arquivo deve possuir uma das extensões a "
+"seguir: .jpg, .png, .gif"
 
 #: chat/models.py:25
 msgid "User One"
