colocando as traduções do relatórios de links

--- a/webpage/locale/pt_BR/LC_MESSAGES/django.po
+++ b/webpage/locale/pt_BR/LC_MESSAGES/django.po
@@ -147,7 +147,7 @@ msgstr "Relatório(s)"
 
 #: templates/webpages/send_message.html:38
 msgid "Click or drop the picture here"
-msgstr "Clique ou arraste a imagem aqui"
+msgstr "Clique ou solte a imagem aqui"
 
 #: templates/webpages/send_message.html:40
 msgid "The picture could not exceed 5MB."
