--- a/goals/locale/pt_BR/LC_MESSAGES/django.po
+++ b/goals/locale/pt_BR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-05-25 22:34-0300\n"
+"POT-Creation-Date: 2017-05-25 23:31-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -81,7 +81,7 @@ msgid "Goal"
 msgstr "Meta"
 
 #: goals/models.py:15 goals/templates/goals/_answered.html:20
-#: goals/views.py:1077
+#: goals/views.py:1108
 msgid "Goals"
 msgstr "Metas"
 
@@ -169,7 +169,7 @@ msgid "Wished period"
 msgstr "Período desejado"
 
 #: goals/templates/goals/_form.html:402
-#: goals/templates/goals/_form_submit.html:54
+#: goals/templates/goals/_form_submit.html:63
 msgid "Save"
 msgstr "Salvar"
 
@@ -188,6 +188,14 @@ msgstr "Adicionar nova notificação"
 #: goals/templates/goals/_form.html:436
 msgid "Remove this"
 msgstr "Remover essa notificação"
+
+#: goals/templates/goals/_form_submit.html:54
+msgid "There are obstacles to your activities?"
+msgstr "Existem impedimentos para as suas atividades?"
+
+#: goals/templates/goals/_form_submit.html:55
+msgid "Type here the dificulties that may harm your performance"
+msgstr "Digite aqui os obstáculos que podem prejudicar o seu desempenho."
 
 #: goals/templates/goals/_history.html:8
 msgid "Date/Hour"
@@ -227,7 +235,7 @@ msgid "Action don't realized"
 msgstr "Ação não realizada"
 
 #: goals/templates/goals/relatorios.html:206
-#: goals/templates/goals/relatorios.html:228 goals/views.py:77
+#: goals/templates/goals/relatorios.html:228 goals/views.py:78
 msgid "Reports"
 msgstr "Relatórios"
 
@@ -362,7 +370,7 @@ msgid "Update My Goals"
 msgstr "Atualizar Minhas Metas"
 
 #: goals/templates/goals/view.html:19 goals/templatetags/goals_filters.py:72
-#: goals/views.py:234
+#: goals/views.py:235
 msgid "My Goals"
 msgstr "Minhas Metas"
 
@@ -386,7 +394,7 @@ msgstr "Adicionou"
 msgid "Updated"
 msgstr "Atualizou"
 
-#: goals/templatetags/goals_filters.py:65 goals/views.py:1057
+#: goals/templatetags/goals_filters.py:65 goals/views.py:1088
 msgid "Submitted"
 msgstr "Submeteu"
 
@@ -395,90 +403,95 @@ msgstr "Submeteu"
 msgid "%s Instance"
 msgstr "Instância de %s"
 
-#: goals/views.py:365 goals/views.py:493
-#, python-format
-msgid "Your goals for %s was save successfully!"
-msgstr "Suas metas para %s foram salvas com sucesso!"
-
-#: goals/views.py:601
-#, python-format
-msgid "Your goals for %s was update successfully!"
-msgstr "Suas metas para %s foram atualizadas com sucesso!"
-
-#: goals/views.py:652 goals/views.py:666 goals/views.py:691 goals/views.py:810
-#: goals/views.py:824 goals/views.py:834
-msgid "Visualize"
-msgstr "Visualizar"
-
-#: goals/views.py:652 goals/views.py:666 goals/views.py:691 goals/views.py:810
-#: goals/views.py:824 goals/views.py:834
-msgid "Submit"
-msgstr "Submeter"
-
-#: goals/views.py:754
-msgid "Create Topic Goals"
-msgstr "Adicionar Metas do Tópico"
-
-#: goals/views.py:765
-#, python-format
-msgid "The Goals specification for the topic %s was realized successfully!"
-msgstr "A Especificação de Metas para o tópico %s foi realizada com sucesso!"
-
-#: goals/views.py:889
-msgid "Update Topic Goals"
-msgstr "Atualizar Metas do Tópico"
-
-#: goals/views.py:900
-#, python-format
-msgid "The Goals specification for the topic %s was updated successfully!"
-msgstr "A Especificação de Metas para o tópico %s foi atualizada com sucesso!"
-
-#: goals/views.py:936
-#, python-format
-msgid "The Goals specification of the topic %s was removed successfully!"
-msgstr "A Especificação de Metas para o tópico %s foi removida com sucesso!"
-
-#: goals/views.py:1026
-msgid "Goals Reports"
-msgstr "Relatórios de metas"
-
-#: goals/views.py:1045
-msgid "Realized"
-msgstr "Realizada"
-
-#: goals/views.py:1045
-msgid "Unrealized"
-msgstr "Não Realizada"
-
-#: goals/views.py:1045
-msgid "Historic"
-msgstr "Histórico"
-
-#: goals/views.py:1057
-msgid "View"
-msgstr "Visualizar"
-
-#: goals/views.py:1088
-msgid "Actions about resource"
-msgstr "Ações sobre o recurso"
-
-#: goals/views.py:1089
-msgid "Quantity"
-msgstr "Quantidade"
-
-#: goals/views.py:1136
-msgid "[Photo]"
-msgstr "[Imagem]"
-
-#: goals/views.py:1148
+#: goals/utils.py:59 goals/views.py:1179
 #, python-format
 msgid "Last message in %s"
 msgstr "Última mensagem em %s"
 
-#: goals/views.py:1156
+#: goals/views.py:354 goals/views.py:490 goals/views.py:608
+#, python-format
+msgid "#Dificulty(ies) found in %s"
+msgstr "#Dificuldade(s) comunicada(s) em %s"
+
+#: goals/views.py:376 goals/views.py:514
+#, python-format
+msgid "Your goals for %s was save successfully!"
+msgstr "Suas metas para %s foram salvas com sucesso!"
+
+#: goals/views.py:632
+#, python-format
+msgid "Your goals for %s was update successfully!"
+msgstr "Suas metas para %s foram atualizadas com sucesso!"
+
+#: goals/views.py:683 goals/views.py:697 goals/views.py:722 goals/views.py:841
+#: goals/views.py:855 goals/views.py:865
+msgid "Visualize"
+msgstr "Visualizar"
+
+#: goals/views.py:683 goals/views.py:697 goals/views.py:722 goals/views.py:841
+#: goals/views.py:855 goals/views.py:865
+msgid "Submit"
+msgstr "Submeter"
+
+#: goals/views.py:785
+msgid "Create Topic Goals"
+msgstr "Adicionar Metas do Tópico"
+
+#: goals/views.py:796
+#, python-format
+msgid "The Goals specification for the topic %s was realized successfully!"
+msgstr "A Especificação de Metas para o tópico %s foi realizada com sucesso!"
+
+#: goals/views.py:920
+msgid "Update Topic Goals"
+msgstr "Atualizar Metas do Tópico"
+
+#: goals/views.py:931
+#, python-format
+msgid "The Goals specification for the topic %s was updated successfully!"
+msgstr "A Especificação de Metas para o tópico %s foi atualizada com sucesso!"
+
+#: goals/views.py:967
+#, python-format
+msgid "The Goals specification of the topic %s was removed successfully!"
+msgstr "A Especificação de Metas para o tópico %s foi removida com sucesso!"
+
+#: goals/views.py:1057
+msgid "Goals Reports"
+msgstr "Relatórios de metas"
+
+#: goals/views.py:1076
+msgid "Realized"
+msgstr "Realizada"
+
+#: goals/views.py:1076
+msgid "Unrealized"
+msgstr "Não Realizada"
+
+#: goals/views.py:1076
+msgid "Historic"
+msgstr "Histórico"
+
+#: goals/views.py:1088
+msgid "View"
+msgstr "Visualizar"
+
+#: goals/views.py:1119
+msgid "Actions about resource"
+msgstr "Ações sobre o recurso"
+
+#: goals/views.py:1120
+msgid "Quantity"
+msgstr "Quantidade"
+
+#: goals/views.py:1167
+msgid "[Photo]"
+msgstr "[Imagem]"
+
+#: goals/views.py:1187
 msgid "The message was successfull sent!"
 msgstr "A mensagem foi enviada com sucesso!"
 
-#: goals/views.py:1158
+#: goals/views.py:1189
 msgid "No user selected!"
 msgstr "Nenhum usuário selecionado!"
