Adjusting chat modal

--- a/chat/locale/pt_BR/LC_MESSAGES/django.po
+++ b/chat/locale/pt_BR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-10-02 21:43-0300\n"
+"POT-Creation-Date: 2017-10-07 00:08-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -231,8 +231,8 @@ msgid "You have new messages..."
 msgstr "Você possui novas mensagens..."
 
 #: chat/templates/chat/talk.html:71
-msgid "Type a new message to "
-msgstr "Digite uma nova mensagem para "
+msgid "Type a new message"
+msgstr "Digite uma nova mensagem"
 
 #: chat/templatetags/chat_tags.py:35
 msgid "Online"
